Videos UI: Correct checkmark list alignment. (#58145)
* Linting fix.

* Properly align checkmarks.

--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -131,8 +131,7 @@
 				.videos-ui__active-video-content {
 					overflow: hidden;
 					max-height: 0;
-					transition:
-						max-height 0.2s ease-out;
+					transition: max-height 0.2s ease-out;
 
 					div {
 						padding: 20px;
@@ -206,12 +205,16 @@
 	@include break-xlarge {
 		.videos-ui__header {
 			.videos-ui__header-content {
-                .videos-ui__titles {
-                    h2 {
-                        font-size: $font-headline-medium;
-                        height: 60px;
-                    }
-                }
+				.videos-ui__titles {
+					h2 {
+						font-size: $font-headline-medium;
+						height: 60px;
+					}
+				}
+
+				.videos-ui__summary {
+					width: 31%;
+				}
 			}
 		}
 
